--- a/css/style.css
+++ b/css/style.css
@@ -1,118 +1,116 @@
 body {
-    font-family: 'Montserrat', sans-serif;
-background-color: #F5F7FA;
+  font-family: "Montserrat", sans-serif;
+  background-color: #f5f7fa;
 }
 
 .t {
   font-size: 14px;
-  font-weight: 700 ;
-color: #000;
-margin-top: 90px;
+  font-weight: 700;
+  color: #000;
+  margin-top: 90px;
 }
 .boxinbox {
-    display:flex;
-    flex-direction: row-reverse;
-    width: 1200px;
-    background-color: #FFF;
-    
+  display: flex;
+  flex-direction: row-reverse;
+  width: 100%;
+  background-color: #fff;
 }
 .osnovnoy-block {
-    display:flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
-.Work-Experience {
-    
-}
-.Manager-Rogatwo {  ;
-    
-}
-.Manager-Roga {
-   
-}
-.Education {
-  
-}
+
 .bok {
-    background-color:#1E2939;
+  background-color: #1e2939;
 }
 .niz {
-    color: rgb(248, 248, 248);
+  color: rgb(248, 248, 248);
 }
 .niz2 {
-    color: rgb(248, 248, 248);
+  color: rgb(248, 248, 248);
 }
 .niz3 {
-    color: rgb(248, 248, 248);
-    margin: 0 0 0 20px;
+  color: rgb(248, 248, 248);
+  margin: 0 0 0 20px;
 }
 .niz4 {
-    color: rgb(248, 248, 248);
-    margin: 0 0 0 20px;
+  color: rgb(248, 248, 248);
+  margin: 0 0 0 20px;
 }
 .niz5 {
-    color: rgb(248, 248, 248);
+  color: rgb(248, 248, 248);
 }
 .niz6 {
-    color: rgb(248, 248, 248);
+  color: rgb(248, 248, 248);
 }
 .niz7 {
-    color: rgb(248, 248, 248);
-    margin: 50px 0 0 40px;
-    
+  color: rgb(248, 248, 248);
+  margin: 50px 0 0 40px;
 }
 .t1 {
-    color: #FB6D3A;
+  color: #fb6d3a;
 }
 .roga {
-    color: #FB6D3A;
+  color: #fb6d3a;
 }
 .text2 {
-    color: #FB6D3A;
+  color: #fb6d3a;
 }
 .text3 {
-    color: #FB6D3A;
+  color: #fb6d3a;
 }
 
-.osnovnoy-block{
-    margin-left: 90px ;
-    
+.osnovnoy-block {
+  margin-left: 90px;
 }
-.tel{
-    color: #FB6D3A;
+.tel {
+  color: #fb6d3a;
 }
-.mail{
-    color: #FB6D3A;
+.mail {
+  color: #fb6d3a;
 }
-.otstyp2{
-    margin-left: 30px ;
+.otstyp2 {
+  margin-left: 30px;
 }
-.otstyp3{
-    margin-left: 30px ;
+.otstyp3 {
+  margin-left: 30px;
 }
 
-.okrasit{
-    color: #FB6D3A;
+.okrasit {
+  color: #fb6d3a;
 }
-.okras2{
-    color: #A8A8A8;
+.okras2 {
+  color: #a8a8a8;
 }
-.okras3{
-    color: #A8A8A8;
+.okras3 {
+  color: #a8a8a8;
 }
-.okras4{
-    color: #A8A8A8;
+.okras4 {
+  color: #a8a8a8;
 }
-.Education{
-    margin-top: 40px;
+.Education {
+  margin-top: 40px;
 }
-.l2{
-    margin-right: 50px;
+.l2 {
+  margin-right: 50px;
 }
 .f3,
-.f4{
-    margin: 50px 0 0 40px;
+.f4 {
+  margin: 50px 0 0 40px;
 }
 .f6,
-.f5{
-    margin: 0px 0 0 40px;
+.f5 {
+  margin: 0px 0 0 40px;
+}
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+.p{
+    width: 700px;
 }
