--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body {
 aside {
   background-color: #1e2939;
   border-radius: 10px;
+  width: 500px;
 }
 ul {
   margin: 0;
@@ -18,7 +19,14 @@ a {
 .container--text{
     width: 700px;
 }
-
+img{
+  display: block;
+  width: 290px;
+  height: 310px;
+  border-radius: 50%;
+  margin-left: 25px;
+  margin-top: 10px;
+}
 
 
 .myData {
