--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ a {
 }
 img{
   display: block;
-  width: 290px;
+  width: 270px;
   height: 310px;
   border-radius: 50%;
   margin-left: 25px;
@@ -34,7 +34,7 @@ img{
 }
 .myData--title {
   color: rgb(248, 248, 248);
-  margin: 0 0 10px 20px;
+  /* margin: 0 0 10px 20px; */
 }
 .list--item{
   color: rgb(248, 248, 248);
@@ -51,14 +51,19 @@ ul > .list--item + .list--item{
 .list--link:hover {
   color: #fb6d3a;
 }
-.education--title{
+/* .education--title{
   margin-left: 30px;
-}
+} */
 .education--item + .education--item{
-  margin-top: 50px;
+  margin-top: 30px;
 }
 .item--title {
-  color: #fb6d3a;
+  
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.item--title-color{
+color: #fb6d3a;
 }
 
 .container {
@@ -82,13 +87,13 @@ ul > .list--item + .list--item{
   margin-left: 90px;
 }
 
-.project--title {
+/* .project--title {
   margin-left: 30px;
-}
+} */
 
-.container--titleName {
+/* .container--titleName {
   margin-left: 30px;
-}
+} */
 
 .project--list {
   margin-right: 50px;
@@ -114,6 +119,11 @@ ul > .list--item + .list--item{
 	transition-duration: 250ms;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-
+.project--text{
+  margin-left: 10px;
+}
+.item--text{
+  margin-top: 10px;
+  margin-bottom: 0;
+}
 
